manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-graph
  namespace: knowledge-graph
spec:
  replicas: 2
  selector:
    matchLabels:
      app: knowledge-graph
  template:
    metadata:
      labels:
        app: knowledge-graph
    spec:
      containers:
      - name: knowledge-graph
        image: knowledgegraphacr.azurecr.io/knowledgegraph:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: knowledge-graph-service
  namespace: knowledge-graph
spec:
  type: LoadBalancer
  selector:
    app: knowledge-graph
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
