manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-graph-service
  namespace: knowledge-graph
spec:
  type: LoadBalancer
  selector:
    app: knowledge-graph
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
